--- a/estilo.css
+++ b/estilo.css
@@ -26,8 +26,6 @@ header{
     text-align: right;
 }
 
-
-
 h1{
     text-align: right;
     color: rgba(255, 255, 255, .8);
@@ -120,11 +118,11 @@ nav{
     left:-16em;
     padding-right: .25em;
     top:0;
-    position: absolute;
     z-index: 20;
     height: 100%;
     padding-top: 3em;
     transition: all .4s;
+    position: fixed;
 }
 
 nav.mostrar{
@@ -134,7 +132,7 @@ nav.mostrar{
 }
 
 #mostrar-nav{
-    position: absolute;
+    
     top:2em;
     left: 1em;
     width: 30px;
@@ -142,6 +140,20 @@ nav.mostrar{
     color: white;
     z-index: 30;
     cursor:pointer;
+    position: fixed;
     
 }
 
+/* custumizing scroll bar */
+
+::-webkit-scrollbar{
+    width: 8px;
+    background-color:grey;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 20px;
+    background-color:#ddd;
+    box-shadow: inset 0 0 6px rgba(0, 0, 3, .3);
+
+}
